--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,9 +2,7 @@
     height: 75px;
     width: 110px;
     background-size: cover;
-    background-image:url(https://i.pinimg.com/736x/98/b8/39/98b839789d39640c724decb8dbc824e5.jpg)
-
-}
+    background-image:url(https://i.pinimg.com/736x/98/b8/39/98b839789d39640c724decb8dbc824e5.jpg)}
 
 .main-header {
     display: flex;
@@ -67,6 +65,8 @@
 
 .bg-blue-500{
     background-color: white;
-    color: black;
+    color: #009ec5;
     font-weight: bold;
+    border-radius: 9999px;
+        border-radius: 9999px;
 }
